--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Home</h1>
+    <h1>Home layout</h1>
     {% block content %}
     {% endblock %}
 </body>
