--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="../css/tailwind.css" rel="stylesheet">
+    <link href="../css/app.css" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
-    <h1>Home layout</h1>
+    <!-- This example requires Tailwind CSS v2.0+ -->
+
+      {% include 'menu/menu.html' %}
+      
+        <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-10">
+          <div class="sm:text-center lg:text-left">
+            <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
+              <span class="block text-red-400 xl:inline">Pizza Santa Isabel</span>
+              <span class="block text-red-400 xl:inline">O Melhor sabor da casa</span>
+            </h1>
+            <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+              Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.
+            </p>
+          </div>
+        </main>
+      </div>
+    </div>
+    <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
+      <img class="h-30 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="../img/banner.jpg" alt="">
+    </div>
+  </div>
+  
     {% block content %}
     {% endblock %}
+    <script src="../js/alpine.min.js" defer></script>
 </body>
 </html>
